fixed issue with glow causing overflow and background videos being too tall.

--- a/src/components/BackgroundVideo/styles.scss
+++ b/src/components/BackgroundVideo/styles.scss
@@ -8,8 +8,8 @@
 
 	video {
 		position: absolute;
-		min-width: 100%;
-		min-height: 100%;		
+		width: 100%;
+		height: 100%;		
 	}
 
 		.first {
