--- a/src/components/Landing/styles.scss
+++ b/src/components/Landing/styles.scss
@@ -49,28 +49,37 @@
 		font-weight: bold;
 	}
 
-.glow {
-	position: absolute;
-	width: 1em;
-	height: 1em;
+.glowWrapper {
+	position: fixed;
+	height: 100%;
+	width: 100%;
 	top: 0;
-	left: 50%;
-	font-size: 100vw;
-	z-index: 2;
-
-	&::before {
-		content: "";
-		display: block;
-		width: 100%;
-		height: 100%;
-		background-color: #d2beaf;
-		border-radius: 100%;
-		opacity: 55%;
-		animation: fade-in 4s;
-		transform: translate(-50%, -80%);
-		filter: blur(0.2em);
-	}
+	left: 0;
+	overflow: hidden;
 }
+
+	.glow {
+		position: absolute;
+		width: 1em;
+		height: 1em;
+		top: 0;
+		left: 50%;
+		font-size: 100vw;
+		z-index: 2;
+
+		&::before {
+			content: "";
+			display: block;
+			width: 100%;
+			height: 100%;
+			background-color: #d2beaf;
+			border-radius: 100%;
+			opacity: 55%;
+			animation: fade-in 4s;
+			transform: translate(-50%, -80%);
+			filter: blur(0.2em);
+		}
+	}
 
 // Mobile landscape
 @media (orientation: landscape) {
